--- a/spring-and-vue2/idea/messages/build.gradle
+++ b/spring-and-vue2/idea/messages/build.gradle
@@ -1,4 +1,6 @@
 plugins {
+    id 'org.springframework.boot' version '2.3.0.RELEASE'
+    id 'io.spring.dependency-management' version '1.0.9.RELEASE'
     id 'java'
 }
 
@@ -10,7 +12,8 @@ repositories {
 }
 
 dependencies {
-    compile("org.springframework:spring-context:5.0.3.RELEASE")
+    implementation "org.springframework.boot:spring-boot-starter-web"
+    implementation "org.springframework.boot:spring-boot-starter-thymeleaf"
     compile("org.apache.logging.log4j:log4j-api:2.10.0")
     compile("org.apache.logging.log4j:log4j-core:2.10.0")
     testCompile group: 'junit', name: 'junit', version: '4.12'
